SPCTR-2722-Fix Masonry Gallery feature not working in FSE (#3042)
* Modified the functionalities for the fix

* Added comments and changelog

* Removed a prop which causing extra margin bottom

* modified changelog

* modified the if condition

* added a new function

* Margin-bottom has been updated for masonry

---------

--- a/src/blocks/extensions/editor.lazy.scss
+++ b/src/blocks/extensions/editor.lazy.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables";
 
-.edit-post-visual-editor .wp-block-gallery.uag-masonry {
+.wp-block-gallery.uag-masonry {
 	/* For Backword */
 	ul.blocks-gallery-grid {
 		column-count: 4;
